# atari-2600-emulator

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: atari-2600-emulator.cpp
